# QPASA_slice-warp

./: .gitignore  .zenodo.json  MANIFEST.in  MPRAGE.nii  gui.py  inhomfft.py  logfield.py  make_dicom.py  mkOSxApp.bash  pyproject.toml  qpasa  qpasa.desktop  ratthres.py  readme.md  rewritedcm.bash  rewritedcm.m  rewritedcm.py  settings.py  setup.cfg  slice_warp.bash  slice_warp.py  slicewarp.bat  strip_and_warp.py  tooltip.py  warps.bash
example/: 20210122_grappa.json
example/20210220_143419_mlBrainStrip_MPRAGE_GRAPPA1mm/: 20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0001.2021.02.20.14.34.40.312500.263962728.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0002.2021.02.20.14.34.40.312500.263962746.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0003.2021.02.20.14.34.40.312500.263962764.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0004.2021.02.20.14.34.40.312500.263962782.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0005.2021.02.20.14.34.40.312500.263962800.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0006.2021.02.20.14.34.40.312500.263962818.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0007.2021.02.20.14.34.40.312500.263962836.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0008.2021.02.20.14.34.40.312500.263962854.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0009.2021.02.20.14.34.40.312500.263962872.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0010.2021.02.20.14.34.40.312500.263962890.IMA  20210220LUNA1.MR.TIEJUN_JREF-LUNA.0013.0011.2021.02.20.14.34.40.312500.263962908.IMA  (+181 more)
src/qpasa/: gui.py  image_preview.py  inhomfft.py  logfield.py  (+4 more)
test/: helper.py  test_pipeline.py  test_rewritedcm.py
(+192 files in other folders)
