[metadata]
name = qpasa
version = 0.1.0
author = Will Foran
author_email = foranw@upmc.edu
description = MR slice positioning with standard to native registration using AFNI and FSL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LabNeuroCogDevel/QPASA_slice-warp
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    nipy
    pydicom
include_package_data = True

[options.package_data]
qpasa = data/slice_atlas.nii.gz, data/slice_atlas.png 

[options.extras_require]
osx = pillow

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qpasa = qpasa.slice_warp:main
